<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/my_gradient_color"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:paddingHorizontal="16dp"
        android:orientation="vertical"
        android:background="@drawable/corners_border"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_generator"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="32dp"
            android:textStyle="bold"
            android:lineHeight="36dp"
            android:layout_marginTop="36dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/black"
            android:layout_marginVertical="36dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:paddingLeft="16dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_length"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold"
                />

            <EditText
                android:layout_width="120dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="16dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inc_lower"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <CheckBox
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:gravity="right"
                 />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inc_upper"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <CheckBox
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:gravity="right"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inc_num"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <CheckBox
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:gravity="right"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inc_spec"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <CheckBox
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:gravity="right"
                />

        </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:text="@string/btn"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="24dp"
                />


    </LinearLayout>

</LinearLayout>